--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Tergel Munkhbat"
-title: "MS Student at KAIST AI"
+title: "Master's Student at KAIST AI"
 email: "tergelmunkhbat@kaist.ac.kr"
 profile_pic: "/assets/profile-pics/tergel.jpg"
 twitter: "https://twitter.com/MunkhbatTergel"
