--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,35 +1,30 @@
 experiences:
-- place: "MIT-IBM Watson AI Lab"
-  time: "May. 2023 - Aug. 2023"
-  title: "Research Intern"
-  subtitle: "Self-Alignment of LLMs for Specialization"
-  category: "work"
-
-- place: "Georgia Tech"
-  time: "Aug. 2022 - Present"
-  title: "Ph.D. in Computer Science"
+- place: "KAIST Optimization and Statistical Inference Lab"
+  time: "Sep. 2023 - Present"
+  title: "M.S. Student"
   category: "school"
 
-- place: "KAIST IR&NLP Lab"
-  time: "Mar. 2021 - July. 2022"
-  title: "Research Associate"
-  subtitle: "QA & IR"
-  category: "work"
-
-- place: "KAIST"
-  time: "Feb. 2019 - Feb. 2021"
-  title: "M.S. in Computer Science"
-  subtitle: "IR&NLP Lab"
+- place: "KOREA INSTITUTE OF SCIENCE AND TECHNOLOGY INFORMATION (KISTI)"
+  time: "Sep. 2020 - Aug. 2023"
+  title: "Student Researcher"
   category: "school"
 
-- place: "Republic of Korea Army"
-  time: "Apr. 2013 - Jan. 2015"
-  title: "Honorably discharged as Sergeant"
-  subtitle: "Compulsory military service"
+- place: "UNITED ALLIANCE"
+  time: "Apr. 2020 - Jul. 2020"
+  title: "System Engineer"
   category: "work"
 
-- place: "Chungnam National University"
-  time: "Mar. 2012 - Feb. 2019"
-  title: "B.E. in Computer Science & Engineering"
-  subtitle: "<i>Summa Cum Laude</i>"
+- place: "FIBO CLOUD"
+  time: "Mar. 2019 - Apr. 2020"
+  title: "Cloud Engineer"
+  category: "work"
+
+- place: "UNITEL GROUP"
+  time: "Jun. 2016 - Mar. 2019"
+  title: "System Engineer"
+  category: "work"
+
+- place: "NATIONAL UNIVERSITY OF MONGOLIA (NUM)"
+  time: "Sep. 2012 - Jun. 2016"
+  title: "B.E. in Computer Networking"
   category: "school"
