--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,30 +1,30 @@
 experiences:
-- place: "KAIST Optimization and Statistical Inference Lab"
+- place: "KAIST"
   time: "Sep. 2023 - Present"
   title: "M.S. Student"
   category: "school"
 
-- place: "KOREA INSTITUTE OF SCIENCE AND TECHNOLOGY INFORMATION (KISTI)"
+- place: "Korea Institute of Science and Technology Information"
   time: "Sep. 2020 - Aug. 2023"
   title: "Student Researcher"
   category: "school"
 
-- place: "UNITED ALLIANCE"
+- place: "United Alliance"
   time: "Apr. 2020 - Jul. 2020"
   title: "System Engineer"
   category: "work"
 
-- place: "FIBO CLOUD"
+- place: "FIBO Cloud"
   time: "Mar. 2019 - Apr. 2020"
   title: "Cloud Engineer"
   category: "work"
 
-- place: "UNITEL GROUP"
+- place: "Unitel"
   time: "Jun. 2016 - Mar. 2019"
   title: "System Engineer"
   category: "work"
 
-- place: "NATIONAL UNIVERSITY OF MONGOLIA (NUM)"
+- place: "National University of Mongolia"
   time: "Sep. 2012 - Jun. 2016"
   title: "B.E. in Computer Networking"
   category: "school"
