--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -4,7 +4,7 @@ experiences:
   title: "M.S. Student"
   category: "school"
 
-- place: "Korea Institute of Science and Technology Information"
+- place: "KISTI"
   time: "Sep. 2020 - Aug. 2023"
   title: "Student Researcher"
   category: "school"
@@ -19,12 +19,12 @@ experiences:
   title: "Cloud Engineer"
   category: "work"
 
-- place: "Unitel"
+- place: "Unitel Group"
   time: "Jun. 2016 - Mar. 2019"
   title: "System Engineer"
   category: "work"
 
 - place: "National University of Mongolia"
   time: "Sep. 2012 - Jun. 2016"
-  title: "B.E. in Computer Networking"
+  title: "B.E. Student"
   category: "school"
