Update google analytics

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -8,3 +8,4 @@ semantic_scholar: "https://www.semanticscholar.org/"
 google_scholar: "https://scholar.google.com/citations?user=-jv2CDIAAAAJ&hl=en"
 linkedin: "https://www.linkedin.com/in/tergel-munkhbat/"
 github: "https://github.com/TergelMunkhbat"
+google_analystics_tracking_id: 'G-KC78MDBHTL'
