--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -26,5 +26,5 @@ experiences:
 
 - place: "National University of Mongolia"
   time: "Sep. 2012 - Jun. 2016"
-  title: "B.E. Student"
+  title: "B.S. Student"
   category: "school"
