Add publication and update info and CV

--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -4,7 +4,7 @@ email: "tergelmunkhbat@kaist.ac.kr"
 profile_pic: "/assets/profile-pics/tergel.jpg"
 twitter: "https://twitter.com/MunkhbatTergel"
 cv: "assets/cv/CV.pdf"
-semantic_scholar: "https://www.semanticscholar.org/"
+semantic_scholar: "https://www.semanticscholar.org/author/Tergel-Munkhbat/2347532889"
 google_scholar: "https://scholar.google.com/citations?user=-jv2CDIAAAAJ&hl=en"
 linkedin: "https://www.linkedin.com/in/tergel-munkhbat/"
 github: "https://github.com/TergelMunkhbat"
