Update experience details, main info, and personal description in CV

--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,6 +1,6 @@
 experiences:
 - place: "KAIST"
-  time: "Sep. 2023 - Present"
+  time: "Sep. 2023 - Aug. 2025"
   title: "M.S. Student"
   category: "school"
 
