--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Tergel Munkhbat"
-title: "Master's Student at KAIST AI"
-email: "tergelmunkhbat@kaist.ac.kr"
+title: "Overexcited AI Entrepreneur & KAIST AI Graduate"
+email: "tergelmunkhbat@gmail.com"
 profile_pic: "/assets/profile-pics/tergel.jpg"
 twitter: "https://twitter.com/MunkhbatTergel"
 cv: "assets/cv/CV.pdf"
