--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -3,7 +3,7 @@ title: "Overexcited AI Entrepreneur & KAIST AI Graduate"
 email: "tergelmunkhbat@gmail.com"
 profile_pic: "/assets/profile-pics/tergel.jpg"
 twitter: "https://twitter.com/MunkhbatTergel"
-cv: "assets/cv/CV.pdf"
+cv: "/assets/cv/CV.pdf"
 semantic_scholar: "https://www.semanticscholar.org/author/Tergel-Munkhbat/2347532889"
 google_scholar: "https://scholar.google.com/citations?user=-jv2CDIAAAAJ&hl=en"
 linkedin: "https://www.linkedin.com/in/tergel-munkhbat/"
